Terminé de resumir hasta diferencial

--- a/apuntes/am2/parcial1-quarto/bibliografia.bib
+++ b/apuntes/am2/parcial1-quarto/bibliografia.bib
@@ -25,3 +25,10 @@
 	edition = {12},
 	publisher = {Pearson Educación},
 },
+@book{tromba,
+  author = {Jerrold E. Marsden and Anthony J. Tromba},
+  title = {Cálculo Vectorial},
+  year = {1991},
+  edition = {3},
+  publisher = {Addison-Wesley Iberoamericana, S.A.}
+}
